--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -152,9 +152,9 @@
         </div>
     </div>
 </div>
-<script type="text/javascript ">
+<!-- <script type="text/javascript ">
     $(window).on('load', function() {
         $('#myModal').modal('show');
     });
-</script>
+</script> -->
 {% endblock content %}
