--- a/api/templates/contactus.html
+++ b/api/templates/contactus.html
@@ -1,14 +1,20 @@
 {% extends 'base.html'%} {% block title %}Contact Us{% endblock title %} {% block content %}
 
 <div class="container-fluid contact_us_background">
-    <div class="row justify-content-end mt-5 px-5">
+    <div class="row justify-content-evenly mt-5">
+        <div class="col-md-5 text-white mt-5">
+            <h1>Contact us</h1>
+            <h3 class="mt-3">whenever & wherever you need it.</h3>
+            <p class="mt-2">Our approach is to provide fast and effective solutions using a methodological structure that has been proven to increase efficiency, reduce costs and protect our clients in terms of their supply chain.</p>
+            <p>For complaint and business related queries, Please fill out this form and one of our executive will reach out to you shortly.</p>
+        </div>
         <div class="col-md-5 mt-4">
             {% if return_message %}
             <div class="alert alert-success" role="alert">
                 {{ return_message }}
             </div>
             {% endif %}
-            <form action="" method="POST">
+            <form action="{% url 'ContactUS' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group mt-5">
                     <label for="name" class="text-white">Name</label>
@@ -19,16 +25,17 @@
                     <input type="email" class="form-control" id="email" placeholder="Enter Email" name="email" required>
                 </div>
                 <div class="form-group mt-2">
+                    <label for="pincode" class="text-white">Mobile Number</label>
+                    <input type="text" class="form-control" id="pincode" aria-describedby="pincode" placeholder="Enter your mobile number" name="pincode" required>
+                </div>
+                <div class="form-group mt-2">
                     <label for="country" class="text-white">Country</label>
                     <select class="form-control" id="country" name="country" required>
                       <option>India</option>
                       <option>Out of India</option>                      
                     </select>
                 </div>
-                <div class="form-group mt-2">
-                    <label for="pincode" class="text-white">Pincode</label>
-                    <input type="text" class="form-control" id="pincode" aria-describedby="pincode" placeholder="Enter Pincode" name="pincode" required>
-                </div>
+
                 <div class="form-group mt-2">
                     <label for="message" class="text-white">Message</label>
                     <textarea class="form-control" id="message" rows="3" name="message"></textarea>
