--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -56,6 +56,7 @@
     <hr>
     <div class="container">
         <div class="row justify-content-center mt-2">
+            <h2 class="text-center mt-5"><b>Why Our Customer Choose Us.</b></h2>
             <div class="col-md-4 mt-5 text-center">
                 <h1 class="fafa_icon_font"><i class="bi bi-truck"></i></h1>
                 <h3>Swift Delivery</h3>
@@ -74,17 +75,17 @@
             </div>
         </div>
         <div class="row justify-content-center mt-5">
-            <div class="col-md-4 mt-2 text-center">
+            <div class="col-md-4 mt-5 text-center">
                 <h1 class="fafa_icon_font"><i class="bi bi-airplane"></i></h1>
                 <h3>Fast Track</h3>
                 <p>Taking delivery services up a notch, Because we know the value of time and Stay connected to your loved ones with our on-time services.</p>
             </div>
-            <div class="col-md-4 mt-2 text-center">
+            <div class="col-md-4 mt-5 text-center">
                 <h1 class="fafa_icon_font"><i class="bi bi-globe"></i></h1>
                 <h3>World wide service</h3>
                 <p>No matter for where the deliveries are, we still deliver on time throughout the world</p>
             </div>
-            <div class="col-md-4 mt-2 text-center mb-4">
+            <div class="col-md-4 mt-5 text-center mb-4">
                 <h1 class="fafa_icon_font"><i class="bi bi-people-fill"></i></h1>
                 <h3>Team work</h3>
                 <p>Don’t worry, our team of ninjas will go out fighting to deliver your package on time</p>
