Changes in api token

--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -26,7 +26,7 @@
         </div>
 
     </div>
-    <div class="row mt-5 back_color_about_us">
+    <div class="row mt-5 back_color_about_us rounded-start-5">
         <div class="col-md-6">
             <img src="{% static '\img\how_we_work.jpg' %}" alt="" class="img-fluid rounded-5">
         </div>
@@ -39,6 +39,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit sit voluptate voluptatum dolorem! Excepturi quaerat quisquam consequatur assumenda, reprehenderit, corporis hic ratione beatae, et impedit quis voluptatum natus sunt quae.</p>
         </div>
     </div>
+    <hr>
     <div class="row justify-content-evenly mt-5 mb-4">
         <div class="col-md-3">
             <div class="row">
@@ -74,6 +75,45 @@
             </div>
         </div>
     </div>
+    <hr>
 </div>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-12 text-center mt-4">
+            <h5 class="service_p">Team</h5>
+            <h1>With a Professional Team</h1>
+            <hr class="line_for">
+            <p>Vel sagittis quam sodales sederat porta nunc amet malesuada consequat blandit sitac amet orci gravida vulputate</p>
+        </div>
+    </div>
+
+    <div class="row mt-5 justify-content-evenly">
+        <div class="col-md-6">
+            <div class="row back_color_about_us rounded-5">
+                <div class="col-md-6 px-0">
+                    <img src="{% static '\img\founder1.jpg' %}" alt="" class="img-fluid rounded-5">
+                </div>
+                <div class="col-md-6 px-3 mt-5">
+                    <h3>Ram Kumar</h3>
+                    <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
+                    <p class="mt-4">Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row back_color_about_us rounded-5">
+                <div class="col-md-6 px-0">
+                    <img src="{% static '\img\founder2.jpg' %}" alt="" class="img-fluid rounded-5">
+                </div>
+                <div class="col-md-6 px-3 mt-5">
+                    <h3>Shyam Kumar</h3>
+                    <h6 class="text-danger">FOUNDER & CEO AIRPOST XPRESS</h6>
+                    <p>Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock content %}
