--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -46,7 +46,7 @@
                 <p>With the progress of time and technology, distance is not too large for you to send a package over to your loved ones, From one end of the world to the other, there’s no losing out on sending a token of love to your loved ones.</p>
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <button type="button" class="btn btn-primary"><i class="bi bi-whatsapp"></i> +91 9529486594</button>
+                        <button type="button" class="btn btn-primary" onclick="location.href='https://api.whatsapp.com/send?phone=919529486594&text=Hello Airpost Xpress, I need super fast courier service, please contact me as soon as possible.'"><i class="bi bi-whatsapp"></i> +91 9529486594</button>
                     </div>
                 </div>
             </div>
