--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -3,25 +3,107 @@
 <div class="container-fluid pt-1">
     <div class="row justify-content-evenly mt-4 network_background pt-5">
         <div class="col-md-4 text-center">
-            <form class="form-inline networ_search_form">
+            <form class="form-inline networ_search_form" method="POST" action="network">
                 {% csrf_token %}
                 <div class="form-group mx-sm-3 mb-2 mt-4">
                     <h2><label for="pincode" class="area_name">Pincode</label></h2>
-                    <input type="text" class="form-control" id="pincode" placeholder="Search By Pincode">
+                    <input type="number" class="form-control" name="pincode" id="pincode" placeholder="Search By Pincode" required>
                 </div>
-                <button type="submit" class="btn btn-primary mb-3">Search</button>
+                <button type="submit" name="by_pincode" class="btn btn-primary mb-3">Search</button>
             </form>
         </div>
         <div class="col-md-4 text-center mb-5">
-            <form class="form-inline networ_search_form">
+            <form class="form-inline networ_search_form" method="POST" action="network">
                 {% csrf_token %}
                 <div class="form-group mx-sm-3 mb-2 mt-4">
                     <h2><label for="area_name" class="area_name">Area Name</label></h2>
-                    <input type="text" class="form-control" id="area_name" placeholder="Search By Area Name">
+                    <input type="text" class="form-control" name="area_name" id="area_name" placeholder="Search By State / Area" required>
                 </div>
-                <button type="submit" class="btn btn-primary mb-3">Search</button>
+                <button type="submit" name="by_area" class="btn btn-primary mb-3">Search</button>
             </form>
         </div>
     </div>
 </div>
-{% endblock content %}
+
+{% if data %}
+
+<div class="container mt-3">
+    <div class='row card-group'>
+        {% for office in data %}
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
+                    <!-- <h4 class="font-weight-bold blue-text"></h4> -->
+                    <p class="card-text">
+                        <b>Zone:</b> {{ office.zone }}
+                        <br><b>Area name:</b> {{ office.area_name }}
+                        <br><b>State: </b>{{ office.state }}
+                        <br><b>Pincode:</b> {{ office.pincode }}
+                        <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
+                        <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
+                        <br><b>Address:</b><br>{{ office.address }}
+
+                    </p>
+                </div>
+                <!-- <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div> -->
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endif %} {% if message %}
+
+<div class="container mt-3 text-center">
+    <div class="row">
+        <div class="col-12">
+            <h3 class="text-danger">Branch not Found.</h3>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+<!-- For RO offices -->
+{% if head_offices %}
+<hr>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-12 text-center">
+            <h5 class="service_p">Regional Offices</h5>
+            <h1>Our Regional offices</h1>
+            <hr class="line_for">
+            <!-- <p>jhgfc njhgfc kjuyhgcf vkluytgfc likuytgfc nlkuytgfrdxkjbf kfgwhg fFDH fgf </p> -->
+        </div>
+
+    </div>
+
+    <div class='row card-group'>
+        {% for office in head_offices %}
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
+                    <!-- <h4 class="font-weight-bold blue-text"></h4> -->
+                    <p class="card-text">
+                        <b>Zone:</b> {{ office.zone }}
+                        <br><b>Area name:</b> {{ office.area_name }}
+                        <br><b>State: </b>{{ office.state }}
+                        <br><b>Pincode:</b> {{ office.pincode }}
+                        <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
+                        <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
+                        <br><b>Address:</b><br>{{ office.address }}
+
+                    </p>
+                </div>
+                <!-- <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div> -->
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+{% endif %} {% endblock content %}
