Add network details

--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -17,7 +17,7 @@
                 {% csrf_token %}
                 <div class="form-group mx-sm-3 mb-2 mt-4">
                     <h2><label for="area_name" class="area_name">Area Name</label></h2>
-                    <input type="text" class="form-control" name="area_name" id="area_name" placeholder="Search By State / Area" required>
+                    <input type="text" class="form-control" name="area_name" id="area_name" placeholder="Search By State / Zone /Area" required>
                 </div>
                 <button type="submit" name="by_area" class="btn btn-primary mb-3">Search</button>
             </form>
