--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -46,7 +46,7 @@
                             <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'ContactUS' %}">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" href="/login">Login</a>
+                            <a class="nav-link active hover-underline-animation" aria-current="page" target="_blank" href="/login">Login</a>
                         </li>
                     </ul>
                 </div>
