--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -40,6 +40,7 @@
                         <br><b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
+                        <br><b>Country:</b> {{ office.country }}
                         <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
                         <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
                         <br><b>Address:</b><br>{{ office.address }}
@@ -91,6 +92,7 @@
                         <br><b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
+                        <br><b>Country:</b> {{ office.country }}
                         <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
                         <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
                         <br><b>Address:</b><br>{{ office.address }}
