--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css\\tracking.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'img\\favicon.ico' %}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>Airpost Xpress | {% block title %}{% endblock title %}</title>
@@ -19,6 +19,7 @@
     <!-- bg-body-tertiary -->
     <section id="blank_section">
     </section>
+    <!--  -->
     <nav class="navbar navbar-expand-lg navbar-default nav_color_spec fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
@@ -34,20 +35,37 @@
                             <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'services' %}">Services</a>
+                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'services' %}">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'network' %}">Network</a>
+                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'network' %}">Network</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'about_us' %}">About Us</a>
+                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'about_us' %}">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" href="{% url 'ContactUS' %}">Contact Us</a>
+                            <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'ContactUS' %}">Contact Us</a>
                         </li>
+                        {% if user.is_authenticated %}
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-outline-success dropdown-toggle nav_login_btn" data-bs-toggle="dropdown" aria-expanded="false">                                                              
+                                {{ user.username }}
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                            </ul>
+                        </div>
+
+                        {% else %}
                         <li class="nav-item">
-                            <a class="nav-link active hover-underline-animation" aria-current="page" target="_blank" href="/login">Login</a>
+                            <!-- <a class="nav-link hover-underline-animation" aria-current="page" href="{% url 'login_auth' %}">Login</a> -->
+                            <a class="btn btn-outline-success nav_login_btn" aria-current="page" href="{% url 'login_auth' %}">Login</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -97,7 +115,8 @@
             <p class="link-text-decor text-center sm_in_sm">&#169; Copyright {{ today_date }} Airpost Xpress Courier Services - All Rights Reserved.</p>
         </div>
     </div>
-    <hr class="mt-1"> {% block alert %}{% endblock alert %}
+    <!-- <hr class="mt-1">  -->
+    {% block alert %}{% endblock alert %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
