--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -1,10 +1,121 @@
-{% extends 'base.html' %}{% block title %}Dashboard{% endblock title %}{% block content %}
+{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %}{% block content %}
 
-<div class="container mt-5">
-    <div class="row mt-5">
-        <div class="col-md-12 mt-5">
-            <h1>Hello, {{ user.username }}</h1>
+<div class="container mt-5 alert alert-dark">
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-outline-dark mt-3" target="_blank">Booking</a>
+            <a href="{% url 'tracking_history' %}" class="text-decoration-none btn btn-outline-dark mt-3" target="_blank">Tracking</a>
+        </div>
+        <!-- <hr class="mt-3"> -->
+    </div>
+</div>
+
+<div class="container alert alert-dark">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card text-center rounded-4">
+                <div class="card-body">
+                    <h3 class="card-title text-danger text-center">Today's Booking</h3>
+                    <hr>
+                    <h5>Shipment Booked:<b> 500 Pcs</b></h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card text-center second_space rounded-4">
+                <div class="card-body">
+                    <h3 class="card-title text-danger text-center">Monthly Booking</h3>
+                    <hr>
+                    <h5>Shipment Booked:<b> 500 Pcs</b></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4 justify-content-center">
+        <div class="col-md-6">
+            <div class="card text-center rounded-4">
+                <div class="card-body">
+                    <h5 class="card-title text-danger text-center">Today's Booking Graph</h5>
+                    <!-- <hr> -->
+                    <canvas id="day_wise"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card text-center second_space rounded-4">
+                <div class="card-body">
+                    <h5 class="card-title text-danger text-center">Monthly Booking Graph</h5>
+                    <!-- <hr> -->
+                    <canvas id="monthly" style="width:100%;max-width:600px"></canvas>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+<script>
+    var xValues = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150];
+    var yValues = [7, 8, 8, 9, 9, 9, 10, 11, 14, 14, 15];
+
+    new Chart("day_wise", {
+        type: "line",
+        data: {
+            labels: xValues,
+            datasets: [{
+                fill: false,
+                lineTension: 0,
+                backgroundColor: "rgba(0,0,255,1.0)",
+                borderColor: "rgba(0,0,255,0.1)",
+                data: yValues
+            }]
+        },
+        options: {
+            legend: {
+                display: false
+            },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        min: 6,
+                        max: 16
+                    }
+                }],
+            }
+        }
+    });
+</script>
+
+<script>
+    var xValues = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150];
+    var yValues = [7, 8, 8, 9, 9, 9, 10, 11, 14, 14, 15];
+
+    new Chart("monthly", {
+        type: "line",
+        data: {
+            labels: xValues,
+            datasets: [{
+                fill: false,
+                lineTension: 0,
+                backgroundColor: "rgba(0,0,255,1.0)",
+                borderColor: "rgba(0,0,255,0.1)",
+                data: yValues
+            }]
+        },
+        options: {
+            legend: {
+                display: false
+            },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        min: 6,
+                        max: 16
+                    }
+                }],
+            }
+        }
+    });
+</script>
+
 {% endblock content %}
