--- a/api/static/css/dashboard.css
+++ b/api/static/css/dashboard.css
@@ -1,3 +1,16 @@
+.form-group.required .control-label:after {
+    color: #d00;
+    content: "*";
+    position: absolute;
+    margin-left: 8px;
+    top: 7px;
+}
+
+.table-responsive {
+    margin-top: -10px;
+    max-height: 470px !important;
+}
+
 @media only screen and (max-width: 768px) {
     .second_space {
         margin-top: 20px;
