--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -36,8 +36,9 @@
                     <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
-                        <b>Zone:</b> {{ office.zone }}
-                        <br><b>Area name:</b> {{ office.area_name }}
+                        <h5><b>Zone: {{ office.zone }} </b></h5>
+                        <!-- <b>Zone:</b> {{ office.zone }} -->
+                        <b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
@@ -88,8 +89,9 @@
                     <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
-                        <b>Zone:</b> {{ office.zone }}
-                        <br><b>Area name:</b> {{ office.area_name }}
+                        <!-- <h5><b>Zone:</b> {{ office.zone }}</h5> -->
+                        <h5><b>Zone: {{ office.zone }}</b></h5>
+                        <b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
