Ajax with edit button

--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -16,17 +16,16 @@
                 $("#id").val(doc_data.id);
                 $("#cnotenumber").val(doc_data.c_note_number);
                 $("#datetime").val(doc_data.doc_date);
-                $("#from_destination").val(doc_data.from_destination__name);
-                $("#party").val(doc_data.party_name__party_name);
+                $("#from_destination").val(doc_data.from_destination).change();
+                $("#party").val(doc_data.party_name).change();
                 $("#receiver_mobile").val(doc_data.receiver_mobile_number);
                 $("#receiver_name").val(doc_data.receiver_name);
-                alert(doc_data.ref_courier_name__name);
-                $("#ref_courier_name").val(doc_data.ref_courier_name__name);
+                $("#ref_courier_name").val(doc_data.ref_courier_name).change();
                 $("#ref_courier_number").val(doc_data.ref_courier_number);
                 $("#sender_mobile").val(doc_data.sender_mobile);
                 $("#sender_name").val(doc_data.sender_name);
-                $("#to_destination").val(doc_data.to_destination__name);
-
+                $("#to_destination").val(doc_data.to_destination).change();
+                // alert(doc_data.to_destination);
 
             },
         });
