--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-md-6 mt-2">
                         <label for="cnotenumber"><b>C. Note number</b></label>
-                        <input type="text" name="cnotenumber" id="cnotenumber" class="form-control" required>
+                        <input type="text" name="cnotenumber" id="cnotenumber" class="form-control" autofocus required>
                         <!-- placeholder="C. N. Number"> -->
                     </div>
                 </div>
