add booking filters

--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -26,6 +26,7 @@
                 $("#sender_name").val(doc_data.sender_name);
                 $("#to_destination").val(doc_data.to_destination).change();
                 // alert(doc_data.to_destination);
+                $("#cnotenumber").focus();
 
             },
         });
