--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -14,7 +14,6 @@
                 // console.log(data)
                 let doc_data = data.data[0];
                 $("#id").val(doc_data.id);
-                $("#cnotenumber").val(doc_data.c_note_number);
                 $("#datetime").val(doc_data.doc_date);
                 $("#from_destination").val(doc_data.from_destination).change();
                 $("#party").val(doc_data.party_name).change();
@@ -27,8 +26,109 @@
                 $("#to_destination").val(doc_data.to_destination).change();
                 // alert(doc_data.to_destination);
                 $("#cnotenumber").focus();
+                $("#cnotenumber").val(doc_data.c_note_number);
 
             },
         });
     });
+
+    // For Date wise search
+    $("#date_search_btn").click(function() {
+        let from_date = $("#from_datetime").val();
+        let to_date = $("#to_datetime").val();
+        let token = $("input[name='csrfmiddlewaretoken']").val();
+        let output = "";
+        let my_data = {
+            from_date: from_date,
+            to_date: to_date,
+            csrfmiddlewaretoken: token
+        }
+        $.ajax({
+            url: "{% url 'advance_search_by_date' %}",
+            method: "POST",
+            dataType: "json",
+            data: my_data,
+            success: function(data) {
+                if (data.status == 1) {
+                    let new_data = data.data;
+                    for (i = 0; i < new_data.length; i++) {
+                        output += "<tr><td>" + new_data[i].c_note_number + "</td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
+                        $("#tbody").html(output);
+                    }
+                    document.querySelectorAll('.booked_data')[0].focus();
+                } else {
+                    alert("No records found in between dates.");
+                }
+            }
+        })
+    })
+
+    // For C NOTE NUMBER wise search
+    $("#c_note_search_btn").click(function() {
+        let c_note_number = $("#c_note_search").val();
+        if (c_note_number == "") {
+            alert("Please enter correct C. Note number")
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                c_note_number: c_note_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_by_c_note' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td>" + new_data[i].c_note_number + "</td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
+                            $("#tbody").html(output);
+                        }
+                        document.querySelectorAll('.booked_data')[0].focus();
+                    } else {
+                        alert("No records found for this consignment number");
+                    }
+                }
+            })
+        }
+
+    })
+
+    // For C NOTE NUMBER wise search
+    $("#ref_num_search_search_btn").click(function() {
+        let ref_number = $("#ref_num_search").val();
+        if (ref_number == "") {
+            alert("Please enter correct Ref. number")
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                ref_number: ref_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_for_ref_number' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td>" + new_data[i].c_note_number + "</td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
+                            $("#tbody").html(output);
+                        }
+                        document.querySelectorAll('.booked_data')[0].focus();
+                    } else {
+                        alert("No records found for this Ref. number");
+                    }
+                }
+            })
+        }
+    })
 </script>
+
+<!-- https://trackcourier.io/api/v1/get_checkpoints_table/{}/ups/ -->
